--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -1,5 +1,4 @@
-product:
-  info: '{product} will cost {price, number, USD} if ordered by {deadline, date, time}'
-  title: 'Hello world!'
-  html:
-    info: '<strong>{product}</strong> will cost <em>{price, number, USD}</em> if ordered by {deadline, date, time}'
+characters:
+  steven: 'International Steven'
+1:
+  firstTest: 'This is the first test message, {val1}.'
