make choice intl

--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -2,3 +2,7 @@ characters:
   steven: 'International Steven'
 1:
   firstTest: 'This is the first test message, {val1}.'
+  choice1:
+    header: 'Translated Header'
+    A: 'AAA -- {opt1}'
+    B: 'B, value B, BBB'
