allow simple intl syntax for dialogue

--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -2,6 +2,7 @@ characters:
   steven: 'International Steven'
 1:
   firstTest: 'This is the first test message, {val1}.'
+  noId: 'This text has no id'
   choice1:
     header: 'Translated Header'
     A: 'AAA -- {opt1}'
