add intl to backdrops and expressions

--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -1,5 +1,9 @@
 characters:
   steven: 'International Steven'
+backdrops:
+  beach: 'beach in the daytime'
+expressions:
+  steven: 'Steven standing'
 1:
   firstTest: 'This is the first test message, {val1}.'
   noId: 'This text has no id'
